cluster/test/traefik/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: traefik-system
  name: traefik-dashboard
spec:
  routes:
  - match: Host(`traefik.test-kubes.com`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
