cluster/test/traefik/traefik-helm.yaml
---
# Create the traefik namespace
apiVersion: v1
kind: Namespace
metadata:
  name: traefik

---
apiVersion: source.toolkit.fluxcd.io/v1
kind: HelmRepository
metadata:
  name: traefik
  namespace: traefik
spec:
  interval: 10m
  url: oci://ghcr.io/traefik/helm/traefik

---

apiVersion: helm.toolkit.fluxcd.io/v2
kind: HelmRelease
metadata:
  name: traefik
  namespace: traefik
spec:
  interval: 10m
  timeout: 5m
  chart:
    spec:
      chart: traefik
      version: '34.1.*'
      sourceRef:
        kind: HelmRepository
        name: traefik
      interval: 5m
  releaseName: traefik
  install:
    remediation:
      retries: 3
  upgrade:
    remediation:
      retries: 3
  test:
    enable: true
  driftDetection:
    mode: enabled
    ignore:
    - paths: ["/spec/replicas"]
      target:
        kind: Deployment
  # values:
  #   replicaCount: 2
